# tidal-dl

./: .gitignore  README.md  build.sh  pyproject.toml  setup.py
tidal_dl/: __init__.py  apiKey.py  decryption.py  download.py  enums.py  events.py  gui.py  model.py  paths.py  printf.py  settings.py  tidal.py
tidal_dl/lang/: __init__.py  english.py  language.py
