[tool.poetry]
name = "tidal-dl"
version = "0.1.0"
description = "tidal-dl lets you download videos and tracks from Tidal."
authors = ["Luca Etienne Schulz <git@les.cx>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
colorama = "^0.4.6"
prettytable = "^3.9.0"
mutagen = "^1.47.0"
psutil = "^5.9.5"
pycryptodome = "^3.18.0"
aigpy = "^2022.7.8.1"
lyricsgenius = "^3.0.1"
pydub = "^0.25.1"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
